--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "placeholder-frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tuanacetinkaya.github.io/placeholder",
+  "homepage": "https://tuanacetinkaya.github.io/placeholder-linkedhu",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -59,6 +59,7 @@
     ]
   },
   "devDependencies": {
-    "@svgr/webpack": "^6.2.1"
+    "@svgr/webpack": "^6.2.1",
+    "gh-pages": "^4.0.0"
   }
 }
